test/libsolidity/syntaxTests/parsing/malformed_enum_declaration.sol
contract c {
	enum foo { WARNING,}
}
// ----
// ParserError: (33-33): Expected identifier after ','
